--- a/PROJECT/customers/customers.css
+++ b/PROJECT/customers/customers.css
@@ -1,6 +1,6 @@
 .testimonial {
-    font-size: 1.2rem;
-    margin: 3rem 0;
+    font-size: 20px;
+    margin: 48px 0;
   }
   
   .testimonial__list {
@@ -9,12 +9,11 @@
   }
   
   .testimonial:first-of-type {
-    margin-top: 6rem;
+    margin-top: 96px;
   }
 
   .testimonial__image-container {
     width: 65%;
-    max-width: 580px;
     display: inline-block;
     vertical-align: middle;
     box-shadow: 3px 3px 5px 3px rgba(0,0,0,0.3);
@@ -27,7 +26,7 @@
   
   .testimonial__info {
     text-align: right;
-    padding: 0.9rem;
+    padding: 14px;
     display: inline-block;
     vertical-align: middle;
     width: 30%;
@@ -42,14 +41,13 @@
   }
   
   .testimonial__name {
-    margin: 0.2rem;
+    margin: 3px;
     color: #ff5454;
-    font-size: 2rem;
   }
   
   .testimonial__subtitle {
     margin: 0;
-    font-size: 1.1rem;
+    font-size: 18px;
     color: #ccc;
   }
   
@@ -62,9 +60,9 @@
   .testimonial__subtitle a:active {
     color: #7a7a7a;
   }
-
+  
   .testimonial__text {
-    margin: 0.2rem;
+    margin: 3px;
   }
   
   
