--- a/PROJECT/main.css
+++ b/PROJECT/main.css
@@ -1,6 +1,6 @@
 #product-overview {
   background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
-    url("images/freedom.jpg") left 10% bottom 70%/cover no-repeat border-box,
+    url("images/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box,
     #ff1b68;
   /* background-image: url("freedom.jpg");
     background-size: cover;
@@ -10,9 +10,10 @@
     background-clip: border-box; */
   /* background-image: linear-gradient(180deg, red 70%, blue 60%, rgba(0,0,0,0.5)); */
   /* background-image: radial-gradient(ellipse farthest-corner at 20% 50%, red, blue 70%, green); */
-  width: 100vw;
-  height: 33vh;
-  margin-top: 2.75rem;
+  width: 100%;
+  height: 528px;
+  padding: 10px;
+  margin-top: 43px;
   /* border: 5px dashed red; */
   position: relative;
 }
@@ -39,8 +40,8 @@
 .plan {
   background: #d5ffdc;
   text-align: center;
-  padding: 1rem;
-  margin: 0.5rem;
+  padding: 16px;
+  margin: 8px;
   display: inline-block;
   width: 30%;
   vertical-align: middle;
@@ -55,7 +56,7 @@
 .plan__annotation {
   background: white;
   color: #19b84c;
-  padding: 0.5rem;
+  padding: 8px;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
 }
@@ -83,18 +84,18 @@
 }
 
 .plan__feature {
-  margin: 0.5rem 0;
+  margin: 8px 0;
 }
 
 #key-features {
   background: #ff1b68;
-  margin-top: 5rem;
-  padding: 1rem;
+  margin-top: 80px;
+  padding: 16px;
 }
 
 #key-features .section-title {
   color: white;
-  margin: 2rem;
+  margin: 32px;
 }
 
 .key-feature__list {
@@ -117,65 +118,16 @@
   border: 2px solid #424242;
   border-radius: 50%;
   margin: auto;
-  padding: 1.5rem;
+  padding: 20px;
 }
 
 .key-feature__description {
   text-align: center;
   font-weight: bold;
   color: white;
-  font-size: 1.2rem;
+  font-size: 20px;
 }
 
 /* h1 {
     font-family: sans-serif;
 } */
-
-.modal {
-  position: fixed;
-  display: none;
-  z-index: 200;
-  top: 20%;
-  left: 30%;
-  width: 40%;
-  background: white;
-  padding: 1rem;
-  border: 1px solid #ccc;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-}
-
-.modal__title {
-  text-align: center;
-  margin: 0 0 1rem 0;
-}
-
-.modal__actions {
-  text-align: center;
-}
-
-.modal__action {
-  border: 1px solid #0e4f1f;
-  background: #0e4f1f;
-  text-decoration: none;
-  color: white;
-  font: inherit;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-}
-
-.modal__action:hover,
-.modal__action:active {
-  background: #2ddf5c;
-  border-color: #2ddf5c;
-}
-
-.modal__action--negative {
-  background: red;
-  border-color: red;
-}
-
-.modal__action--negative:hover,
-.modal__action--negative:active {
-  background: #ff5454;
-  border-color: #ff5454;
-}
