--- a/PROJECT/packages/packages.css
+++ b/PROJECT/packages/packages.css
@@ -1,19 +1,19 @@
 main {
-    padding-top: 2rem;
+    padding-top: 32px;
 }
 
 .background {
     background: url("../images/plans-background.jpg") center/cover;
     filter: grayscale(40%);
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     position: fixed;
     z-index: -1;
 }
 
 .package {
     width: 80%;
-    margin: 1rem 0;
+    margin: 16px 0;
     border: 4px solid #0e4f1f;
     border-left: none;
     position: relative;
@@ -30,18 +30,18 @@ main {
     text-decoration: none;
     color: inherit;
     display: block;
-    padding: 2rem;
+    padding: 32px;
 }
 
 .package__badge {
     position: absolute;
     top: 0;
     right: 0;
-    margin: 1.2rem;
-    font-size: 0.8rem;
+    margin: 20px;
+    font-size: 12px;
     color: white;
     background: #ff5454;
-    padding: 0.5rem;
+    padding: 8px;
 }
 
 .package__subtitle {
@@ -49,9 +49,9 @@ main {
 }
 
 .package__info {
-    padding: 1rem;
+    padding: 16px;
     border: 1px solid #0e4f1f;
-    font-size: 1.2rem;
+    font-size: 20px;
     color: #0e4f1f;
     background: white;
 }
