--- a/PROJECT/customers/customers.css
+++ b/PROJECT/customers/customers.css
@@ -1,6 +1,6 @@
 .testimonial {
     font-size: 1.2em;
-    margin: 48px 0;
+    margin: 3rem 0;
   }
   
   .testimonial__list {
@@ -9,7 +9,7 @@
   }
   
   .testimonial:first-of-type {
-    margin-top: 96px;
+    margin-top: 6rem;
   }
 
   .testimonial__image-container {
@@ -27,7 +27,7 @@
   
   .testimonial__info {
     text-align: right;
-    padding: 14px;
+    padding: 0.9rem;
     display: inline-block;
     vertical-align: middle;
     width: 30%;
@@ -64,7 +64,7 @@
   }
   
   .testimonial__text {
-    margin: 3px;
+    margin: 0.2rem;
   }
   
   
