--- a/PROJECT/shared.css
+++ b/PROJECT/shared.css
@@ -8,11 +8,12 @@ body {
 }
 
 .backdrop {
-    display: none;
+    /*display: none;*/
     position: fixed;
     z-index: 100;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    /*width: 100vmin;*/
+    height: 100vh;
     background: rgba(0,0,0,0.5);
 }
 
